config/participants/mtn/ingress.yaml

apiVersion: extensions/v1beta1 
kind: Ingress
metadata:
  name: ingress-mtn
  annotations:
    kubernetes.io/ingress.class: kong
    konghq.com/plugins: default-rewrite
spec:
  rules:
    - host: mtn-backend.sandbox.mojaloop.io
      http:
        paths:
          - path: /(.*)
            backend:
              serviceName: mtn-sim-mtn-backend
              servicePort: 3003
    - host: mtn-sdk-scheme-adapter-inbound.sandbox.mojaloop.io
      http:
        paths:
          - path: /(.*)
            backend:
              serviceName: mtn-sim-mtn-scheme-adapter
              servicePort: 4000
    - host: mtn-sdk-scheme-adapter-outbound.sandbox.mojaloop.io
      http:
        paths:
          - path: /(.*)
            backend:
              serviceName: mtn-sim-mtn-scheme-adapter
              servicePort: 4001
